# Facial-Keypoint-Detection

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
docs/guidelines/: Docker_0126.md  FastAPI_0126.md  Git_0126.md  Makefile_0126.md  Python_0126.md  README.md  SPLASH_PAGE_BLUEPRINT.md  Testing_0126.md
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_inference_pipeline.ipynb  Facial-Keypoint-Detection.ipynb
output/: keypoints.json
scripts/: download_data.py
src/facial_keypoints/: __init__.py  config.py  exceptions.py  pipeline.py
src/facial_keypoints/data/: __init__.py  download.py  loader.py
src/facial_keypoints/detection/: __init__.py  face_detector.py
src/facial_keypoints/models/: __init__.py  predictor.py
src/facial_keypoints/visualization/: __init__.py  plotting.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_face_detector.py  test_loader.py
